--- a/force-app/main/default/classes/classPdfDebitNote.cls
+++ b/force-app/main/default/classes/classPdfDebitNote.cls
@@ -47,7 +47,7 @@ public class classPdfDebitNote {
         if(strId!=null && strId!='')
         {
             
-            dcNote=[select id,Amount__c,Bill_To_Customer_Name__r.Name,Billing_Address__c,Billing_GSTIN_No__c,Container_No__c,Customer_Party__c,
+            dcNote=[select id,Bill_To_Customer_Name__r.Name,Billing_Address__c,Billing_GSTIN_No__c,Container_No__c,Customer_Party__c,
                     Delivery_Term__c,Detail__c,Dispatch_Address__c,Dispatch_Date__c,Dispatch_No__c,ESN_No__c,Dispatch_To_Customer_Name__r.name,
                     LC_Date__c,LC_Expected_Date__c,createdDate,LC_Term__c,MRN__c,MRN__r.Ware_House__r.Branch__c,MRN__r.Ware_House__r.City__c,MRN__r.OEM_Customer__r.ShippingState,Payment_Method__c,Shipping_GSTIN_No__c,Name,Voucher_Date__c from
                     DC_Note__c where id =:strId];
@@ -60,7 +60,7 @@ public class classPdfDebitNote {
             DateTime dT = dcNote.createdDate;
             dte = date.newinstance(dT.year(), dT.month(), dT.day());
             
-            dcNoteLi=[select id,Amount__c,CGST_Amount__c,HSN_Code__c,Part_Number__r.Name,CGST__c,Name,Discount_Currency__c,Discount__c,
+            dcNoteLi=[select id,Amount__c,CGST_Amount__c,Part_Number__r.HSN_CODE__c,Part_Number__r.Name,CGST__c,Name,Discount_Currency__c,Discount__c,
                       IGST_Amount__c,IGST__c,Part_Name__c,Part_Number__c, Part_Number__r.UOM__c,Quantity__c,SGST_Amount__c,SGST__c,
                       Doc_No__c,Taxable_Amount__c,Net_Amount__c,Total_Amount__c,Unit__c,Unit_Price__c from DC_Note_Line_Item__c where Doc_No__c =:dcNote.id];
             
